diseño de card avatar y card 1

--- a/index.html
+++ b/index.html
@@ -1,4 +1,37 @@
-<!-- avatar -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <title>avatar</title>
+</head>
+<body>
+    <div class="container">
+            <h1>!Descubre tu destino soñado¡</h1>
+        <div class="titulo">
+            <button disabled>Escoge tu Avatar</button>
+        </div>
+
+        <div class="img__avatar">
+            <img src="./img/gato-programador1.jpeg" alt="Avatar" width="100px" >
+        </div>
+        <section class="data">
+            <div>
+                <label for="Nombre">Nombre: </label>
+                <input type="text" name="Nombre" id="nombre">
+                <label for="correo">Correo Electronico</label>
+                <input type="text">
+                <button class="data_button">Avatar Aleatorio</button>
+            </div>
+            <div class="button_aventura">
+                <button ><a href="./page/card2.html">Proxima aventura</a></button>
+            </div>
+
+        </body>
+        </section>
+        </div>
+</html>
 
 
 
