--- a/index.html
+++ b/index.html
@@ -4,35 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>avatar</title>
+    <title>inicio</title>
 </head>
 <body>
-    <div class="container">
-            <h1>!Descubre tu destino soñado¡</h1>
-        <div class="titulo">
-            <button disabled>Escoge tu Avatar</button>
-        </div>
+        <header>
+            <nav class="nav">
+                <img class="nav__logo" src="./img/amadeus-logo-dark-sky.png" alt="logo">
+                <ul class="nav__lista">
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">nosotros</a></li>
+                    <li><a href="#">amadeus pag</a paga></li>
+                </ul>
+            </nav>
+    </header>
 
-        <div class="img__avatar">
-            <img src="./img/gato-programador1.jpeg" alt="Avatar" width="100px" >
+    <section class="padre">
+        <div class="container">
+            <div class="play">
+                <!-- <img src="./img/tiera.png" alt="tierra"> -->
+                <button><a href="./page/card1.html">Play the game</a></button>
+            </div>
+            <div class="nosotros">
+                <p>
+                    <h1>NOSOTROS</h1>
+                    <p>Amadeus es una empresa de tecnología de viajes que ofrece soluciones de tecnología de vanguardia para que los viajes sean más fáciles, mejores y más accesibles para todos. Amadeus ofrece soluciones de tecnología de vanguardia para que los viajes sean más fáciles, mejores y más accesibles para todos. Amadeus ofrece soluciones de tecnología de vanguardia para que los viajes sean más fáciles, mejores y más accesibles para todos. Amadeus ofrece soluciones de tecnología de vanguardia para que los viajes sean más fáciles, mejores y más accesibles para todos. Amadeus ofrece soluciones de tecnología de vanguardia para que los viajes sean más fáciles, mejores y más accesibles para todos. Amadeus ofrece soluciones de tecnología de vanguardia para que los viajes sean más fáciles, mejores y más accesibles para todos. Amadeus ofrece soluciones de tecnología de vanguardia para que los viajes sean más fáciles, mejores y más accesibles para todos.</p>
+                </p>
+            </div>
         </div>
-        <section class="data">
-            <div>
-                <label for="Nombre">Nombre: </label>
-                <input type="text" name="Nombre" id="nombre">
-                <label for="correo">Correo Electronico</label>
-                <input type="text">
-                <button class="data_button">Avatar Aleatorio</button>
-            </div>
-            <div class="button_aventura">
-                <button ><a href="./page/card2.html">Proxima aventura</a></button>
-            </div>
+    </section>
 
-        </body>
-        </section>
-        </div>
+</body>
 </html>
 
-
-
-<!-- boton proxima aventura  -->
